Updated custom-select for backend Yii

--- a/source/ui-kit.html
+++ b/source/ui-kit.html
@@ -17,12 +17,12 @@
         </div>
         <div class="custom-select__empty-box">По вашему запросу ничего не найдено</div>
         <ul class="custom-select__list" role="listbox">
-          <li class="custom-select__item" tabindex="0" data-select-value="id-1" aria-selected="false" role="option">Программа моделирования технологических процессов обработки металлов давлением (QForm)</li>
-          <li class="custom-select__item" tabindex="0" data-select-value="id-2" aria-selected="false" role="option">Zyfra Industrial Automation Kit</li>
-          <li class="custom-select__item" tabindex="0" data-select-value="id-3" aria-selected="false" role="option">pSeven</li>
-          <li class="custom-select__item" tabindex="0" data-select-value="id-4" aria-selected="false" role="option">«ADEM-VX CAM версия 2020 для КОМПАС-3D»</li>
-          <li class="custom-select__item" tabindex="0" data-select-value="id-5" aria-selected="false" role="option">Цифровые сервисы планирования и диспетчеризации производства / Zyfra Production Scheduling</li>
-          <li class="custom-select__item" tabindex="0" data-select-value="id-6" aria-selected="false" role="option">«ADEM-VX CAM версия 2020 для КОМПАС-3D»</li>
+          <li class="custom-select__item" tabindex="0" data-select-value="id-1" aria-selected="false" role="option" data-test="1" data-some="xxx">Программа моделирования технологических процессов обработки металлов давлением (QForm)</li>
+          <li class="custom-select__item" tabindex="0" data-select-value="id-2" aria-selected="false" role="option" data-test1="boo">Zyfra Industrial Automation Kit</li>
+          <li class="custom-select__item" tabindex="0" data-select-value="id-3" aria-selected="false" role="option" data-test1="boo2">pSeven</li>
+          <li class="custom-select__item" tabindex="0" data-select-value="id-4" aria-selected="false" role="option" data-test1="boo3">«ADEM-VX CAM версия 2020 для КОМПАС-3D»</li>
+          <li class="custom-select__item" tabindex="0" data-select-value="id-5" aria-selected="false" role="option" data-test1="boo4">Цифровые сервисы планирования и диспетчеризации производства / Zyfra Production Scheduling</li>
+          <li class="custom-select__item" tabindex="0" data-select-value="id-6" aria-selected="false" role="option" data-test1="boo5">«ADEM-VX CAM версия 2020 для КОМПАС-3D»</li>
           <li class="custom-select__item" tabindex="0" data-select-value="id-7" aria-selected="false" role="option">Zyfra Plant Production Planning</li>
           <li class="custom-select__item" tabindex="0" data-select-value="id-8" aria-selected="false" role="option">Цифровая платформа StreamDat (СтримДат)</li>
           <li class="custom-select__item" tabindex="0" data-select-value="id-9" aria-selected="false" role="option">СПРУТ-ОКП</li>
@@ -224,7 +224,7 @@
     </div>
   </div>
   <script src="js/libs.js"></script>
-  <script src="js/main.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
