--- a/source/index.html
+++ b/source/index.html
@@ -316,6 +316,11 @@
         <li>
           <a href="direct-line-result.html" target="_blank">Прямая линия с Василием Голубевым - результаты</a>
         </li>
+
+        <br>
+        <li>
+          <a href="voting-page.html" target="_blank">Страница голосования - район не выбран</a>
+        </li>
       </ul>
     </div>
   </main>
