--- a/source/voting-page.html
+++ b/source/voting-page.html
@@ -50,6 +50,9 @@
     </section>
     <section class="voting section">
       <div class="container">
+
+        <include src="source/components/notification-block-3.html"></include>
+
         <div class="activity-tabs activity-tabs--radio">
           <ul class="activity-tabs__list">
             <li class="activity-tabs__item">
