--- a/source/index.html
+++ b/source/index.html
@@ -20,6 +20,9 @@
           <a href="main-with-banner.html" target="_blank">Главная с баннером</a>
         </li>
         <li>
+          <a href="main-with-banner-2.html" target="_blank">Главная с баннером - новая</a>
+        </li>
+        <li>
           <a href="page-404.html" target="_blank">404</a>
         </li>
         <li>
