--- a/source/voting-page.html
+++ b/source/voting-page.html
@@ -51,7 +51,17 @@
     <section class="voting section">
       <div class="container">
 
-        <include src="source/components/notification-block-3.html"></include>
+        <div class="info-banner info-banner--black">
+          <svg width="24" height="24" class="info-icon info-banner__icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+            <path fill="currentColor" fill-rule="evenodd" d="M.2 12C.2 5.494 5.492.2 12 .2 18.505.2 23.8 5.494 23.8 12c0 6.506-5.294 11.8-11.8 11.8C5.492 23.8.2 18.506.2 12zm2.152 0c0 5.32 4.328 9.647 9.647 9.647 5.32 0 9.647-4.327 9.647-9.647S17.318 2.354 12 2.354 2.352 6.68 2.352 12z" clip-rule="evenodd"></path>
+            <rect width="2.5" height="8" x="10.75" y="6" fill="currentColor" rx="1"></rect>
+            <rect width="2.5" height="3" x="10.75" y="15" fill="currentColor" rx="1"></rect>
+          </svg>
+
+          <p class="info-banner__text">
+            Вы не можете голосовать за представленные территории и дизайн-проекты, т.к. уже ранее отдали свой голос в другом муниципалитете.
+          </p>
+        </div>
 
         <div class="activity-tabs activity-tabs--radio">
           <ul class="activity-tabs__list">
