--- a/source/voting-page.html
+++ b/source/voting-page.html
@@ -24,6 +24,20 @@
         <div class="page-line"></div>
         <h1 class="page-title">Объекты для голосования</h1>
         <p class="page-description">Муниципальное образование или район</p>
+
+        <select class="_select-search" id="formSelect2" data-trigger="data-trigger">
+          <option placeholder value="">Выберите одну из опций</option>
+          <optgroup label="Кемерово (районы города)">
+            <option value="1">Ленинский</option>
+          </optgroup>
+          <optgroup label="Муниципальные образования региона">
+            <option value="2">Беловский</option>
+            <option value="3">Новокузнецкий муниципальный район</option>
+            <option value="4">Осинниковский</option>
+          </optgroup>
+        </select>
+
+
         <div class="custom-select custom-select--search custom-select--input" data-select data-name="some-name" data-id="id-example" data-insert="true">
           <button class="custom-select__button" type="button" aria-label="Выберите одну из опций">
             <span class="custom-select__text">Выберите одну из опций</span>
