правит заголовки на improvement-list_var2-new

--- a/source/improvement-list_var2-new.html
+++ b/source/improvement-list_var2-new.html
@@ -389,13 +389,14 @@
                           <label class="proposal__project-title" for="radio-1">Вариант №1</label>
                         </div>
                       </div>
-                      <span class="proposal__project-votes">Всего проголосовало: 504</span>
+                      <span class="proposal__project-votes proposal__project-votes--mobile">Всего проголосовало: 504</span>
                     </div>
                     <p class="proposal__project-text">
                       Рыбные тексты также применяются для&nbsp;демонстрации различных видов шрифта и&nbsp;в&nbsp;разработке макетов. Как&nbsp;правило их содержание бессмысленно. По&nbsp;причине своей функции текста- заполнителя для&nbsp;макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и&nbsp;длины слов ничто не отвлекает от&nbsp;оценки воздействия и&nbsp;читаемости различных шрифтов, а&nbsp;также от&nbsp; распределения текста.
                     </p>
                   </div>
                   <div class="proposal__project-img">
+                    <span class="proposal__project-votes proposal__project-votes--desktop">Всего проголосовало: 504</span>
                     <a class="proposal__project-link gallery__item-link js-single-image-link" href="img/img-project/project-img-1@2x.png" target="_blank"
                       aria-label="описание картинки" data-index="0">
                       <div class="proposal__project-figure gallery__item">
@@ -566,13 +567,14 @@
                           <label  ="proposal__project-title" for="radio-2">Вариант №2</label>
                         </div>
                       </div>
-                      <span class="proposal__project-votes">Всего проголосовало: 504</span>
+                      <span class="proposal__project-votes proposal__project-votes--mobile">Всего проголосовало: 504</span>
                     </div>
                     <p class="proposal__project-text opened">
                       Рыбные тексты также применяются для&nbsp;демонстрации различных видов шрифта и&nbsp;в&nbsp;разработке макетов. Как&nbsp;правило их содержание бессмысленно. По&nbsp;причине своей функции текста- заполнителя для&nbsp;макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и&nbsp;длины слов ничто не отвлекает от&nbsp;оценки воздействия и&nbsp;читаемости различных шрифтов, а&nbsp;также от&nbsp; распределения текста.
                     </p>
                   </div>
                   <div class="proposal__project-img">
+                    <span class="proposal__project-votes proposal__project-votes--desktop">Всего проголосовало: 504</span>
                     <a class="proposal__project-link gallery__item-link js-single-image-link" href="img/img-project/project-img-2@2x.png" target="_blank"
                       aria-label="описание картинки" data-index="0">
                       <div class="proposal__project-figure gallery__item">
@@ -743,13 +745,14 @@
                           <label class="proposal__project-title" for="radio-3">Вариант №3</label>
                         </div>
                       </div>
-                      <span class="proposal__project-votes">Всего проголосовало: 504</span>
+                      <span class="proposal__project-votes proposal__project-votes--mobile">Всего проголосовало: 504</span>
                     </div>
                     <p class="proposal__project-text">
                       Рыбные тексты также применяются для&nbsp;демонстрации различных видов шрифта и&nbsp;в&nbsp;разработке макетов. Как&nbsp;правило их содержание бессмысленно. По&nbsp;причине своей функции текста- заполнителя для&nbsp;макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и&nbsp;длины слов ничто не отвлекает от&nbsp;оценки воздействия и&nbsp;читаемости различных шрифтов, а&nbsp;также от&nbsp; распределения текста.
                     </p>
                   </div>
                   <div class="proposal__project-img">
+                    <span class="proposal__project-votes proposal__project-votes--desktop">Всего проголосовало: 504</span>
                     <a class="proposal__project-link gallery__item-link js-single-image-link" href="img/img-project/project-img-3@2x.png" target="_blank"
                       aria-label="описание картинки" data-index="0">
                       <div class="proposal__project-figure gallery__item">
