--- a/source/proposal-6-7_var3-new.html
+++ b/source/proposal-6-7_var3-new.html
@@ -220,13 +220,14 @@
                           <label class="proposal__project-title" for="radio-1">Вариант №1</label>
                         </div>
                       </div>
-                      <span class="proposal__project-votes">Всего проголосовало: 504</span>
+                      <span class="proposal__project-votes proposal__project-votes--mobile">Всего проголосовало: 504</span>
                     </div>
                     <p class="proposal__project-text">
                       Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста.
                     </p>
                   </div>
                   <div class="proposal__project-img">
+                    <span class="proposal__project-votes proposal__project-votes--desktop">Всего проголосовало: 504</span>
                     <a class="proposal__project-link gallery__item-link js-image-popup-link" href="img/img-project/project-img-1@2x.png" target="_blank"
                       aria-label="описание картинки" data-index="0">
                       <div class="proposal__project-figure gallery__item">
@@ -373,13 +374,14 @@
                           <label class="proposal__project-title" for="radio-2">Вариант №2</label>
                         </div>
                       </div>
-                      <span class="proposal__project-votes">Всего проголосовало: 504</span>
+                      <span class="proposal__project-votes proposal__project-votes--mobile">Всего проголосовало: 504</span>
                     </div>
                     <p class="proposal__project-text">
                       Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста.
                     </p>
                   </div>
                   <div class="proposal__project-img">
+                    <span class="proposal__project-votes proposal__project-votes--desktop">Всего проголосовало: 504</span>
                     <a class="proposal__project-link gallery__item-link js-image-popup-link" href="img/img-project/project-img-2@2x.png" target="_blank"
                       aria-label="описание картинки" data-index="0">
                       <div class="proposal__project-figure gallery__item">
@@ -526,13 +528,14 @@
                           <label class="proposal__project-title" for="radio-3">Вариант №3</label>
                         </div>
                       </div>
-                      <span class="proposal__project-votes">Всего проголосовало: 504</span>
+                      <span class="proposal__project-votes proposal__project-votes--mobile">Всего проголосовало: 504</span>
                     </div>
                     <p class="proposal__project-text">
                       Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста.
                     </p>
                   </div>
                   <div class="proposal__project-img">
+                    <span class="proposal__project-votes proposal__project-votes--desktop">Всего проголосовало: 504</span>
                     <a class="proposal__project-link gallery__item-link js-image-popup-link" href="img/img-project/project-img-3@2x.png" target="_blank"
                       aria-label="описание картинки" data-index="0">
                       <div class="proposal__project-figure gallery__item">
