--- a/source/voting-page.html
+++ b/source/voting-page.html
@@ -22,6 +22,22 @@
           <span>а также их передачу в соответствии с п.3. ст.6 ФЗ-152 «О персональных данных» оператором голосования по отбору общественных территорий, подлежащих благоустройству в рамках реализации муниципальных программ (подпрограмм) формирования современной городской среды в рамках федерального проекта «Формирование комфортной городской среды» в составе государственной программы Российской Федерации «Обеспечение доступным и комфортным жильем и коммунальными услугами граждан Российской Федерации ФАУ «Проектная дирекция Минстроя России»</span>
         </div>
         <div class="page-line"></div>
+        <div class="status-info status-info--accent status-info--voting">
+          <div class="status-info__text-group">
+            <svg width="24" height="24">
+              <use xlink:href="img/sprite.svg#icon-done"></use>
+            </svg>
+            <p class="status-info__text">Голосование завершено. Идет подведение итогов</p>
+          </div>
+        </div>
+        <div class="status-info status-info--voting">
+          <div class="status-info__text-group">
+            <svg width="24" height="24">
+              <use xlink:href="img/sprite.svg#icon-done"></use>
+            </svg>
+            <p class="status-info__text">Голосование завершено. Идет подведение итогов</p>
+          </div>
+        </div>
         <h1 class="page-title">Объекты для голосования</h1>
         <p class="page-description">Муниципальное образование или район</p>
 
