--- a/source/improvement-list_var2-new.html
+++ b/source/improvement-list_var2-new.html
@@ -118,10 +118,15 @@
           <li class="proposal-list__item">
             <div class="proposal-list__wrapper">
               <div class="proposal-list__project-mark">
-                <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <circle cx="7" cy="7" r="7" fill="#DCDEE0"/>
-                  <path d="M4.19922 7.00039L6.43922 9.10039L9.79922 4.90039" stroke="white" stroke-width="1.5"/>
-                </svg>
+                <div class="proposal-list__tooltip proposal-list__tooltip--blue">
+                  <div class="proposal-list__tooltip-icon" tabindex="0">
+                    <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+                      <use xlink:href="img/sprite.svg#icon-info"></use>
+                    </svg>
+                    <p class="proposal-list__tooltip-text">Не включен в программу</p>
+                  </div>
+                  <span class="proposal-list__tooltip-desc">Победитель</span>
+                </div>
                 <span>Дизайн-проект</span>
               </div>
               <div class="proposal-list__address">
@@ -161,10 +166,14 @@
           <li class="proposal-list__item">
             <div class="proposal-list__wrapper">
               <div class="proposal-list__project-mark">
-                <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <circle cx="7" cy="7" r="7" fill="#DCDEE0"/>
-                  <path d="M4.19922 7.00039L6.43922 9.10039L9.79922 4.90039" stroke="white" stroke-width="1.5"/>
-                </svg>
+                <div class="proposal-list__tooltip">
+                  <div class="proposal-list__tooltip-icon" tabindex="0">
+                    <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+                      <use xlink:href="img/sprite.svg#icon-info"></use>
+                    </svg>
+                    <p class="proposal-list__tooltip-text">Не включен в программу</p>
+                  </div>
+                </div>
                 <span>Дизайн-проект</span>
               </div>
               <div class="proposal-list__address">
@@ -204,10 +213,15 @@
           <li class="proposal-list__item">
             <div class="proposal-list__wrapper">
               <div class="proposal-list__project-mark">
-                <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <circle cx="7" cy="7" r="7" fill="#DCDEE0"/>
-                  <path d="M4.19922 7.00039L6.43922 9.10039L9.79922 4.90039" stroke="white" stroke-width="1.5"/>
-                </svg>
+                <div class="proposal-list__tooltip proposal-list__tooltip--blue no-pointer">
+                  <div class="proposal-list__tooltip-icon">
+                    <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+                      <use xlink:href="img/sprite.svg#icon-info"></use>
+                    </svg>
+                    <p class="proposal-list__tooltip-text">Не включен в программу</p>
+                  </div>
+                  <span class="proposal-list__tooltip-desc">Победитель</span>
+                </div>
                 <span>Дизайн-проект</span>
               </div>
               <div class="proposal-list__address">
@@ -376,6 +390,24 @@
         </div>
         <div class="proposal">
           <div class="proposal__projects">
+            <div class="proposal__banner info-banner">
+              <svg width="24" height="24" class="info-icon info-banner__icon" xmlns="http://www.w3.org/2000/svg" fill="none"
+                viewBox="0 0 24 24">
+                <path fill="currentColor" fill-rule="evenodd"
+                  d="M.2 12C.2 5.494 5.492.2 12 .2 18.505.2 23.8 5.494 23.8 12c0 6.506-5.294 11.8-11.8 11.8C5.492 23.8.2 18.506.2 12zm2.152 0c0 5.32 4.328 9.647 9.647 9.647 5.32 0 9.647-4.327 9.647-9.647S17.318 2.354 12 2.354 2.352 6.68 2.352 12z"
+                  clip-rule="evenodd"></path>
+                <rect width="2.5" height="8" x="10.75" y="6" fill="currentColor" rx="1"></rect>
+                <rect width="2.5" height="3" x="10.75" y="15" fill="currentColor" rx="1"></rect>
+              </svg>
+
+              <p class="info-banner__title">
+                Данный объект победил в голосовании.
+              </p>
+
+              <p class="info-banner__text">
+                Посмотрите вариант финального дизайн-проекта для его реализации
+              </p>
+            </div>
             <h2 class="subtitle subtitle--large">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях</h2>
             <h2 class="subtitle subtitle--large">Выберите дизайн-проект для реализации этой&nbsp;территории</h2>
             <form action="#" method="post">
@@ -388,6 +420,12 @@
                           <input type="radio" name="radio" id="radio-1" value="radio-1">
                           <label class="proposal__project-title" for="radio-1">Вариант №1</label>
                         </div>
+                      </div>
+                      <div class="proposal__markup proposal__markup--blue">
+                        <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+                          <use xlink:href="img/sprite.svg#icon-info"></use>
+                        </svg>
+                        <span class="proposal__markup-text">Победитель</span>
                       </div>
                       <span class="proposal__project-votes proposal__project-votes--mobile">Всего проголосовало: 504</span>
                     </div>
@@ -566,6 +604,12 @@
                           <input type="radio" name="radio" id="radio-2" value="radio-2" checked>
                           <label  ="proposal__project-title" for="radio-2">Вариант №2</label>
                         </div>
+                      </div>
+                      <div class="proposal__markup">
+                        <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+                          <use xlink:href="img/sprite.svg#icon-info"></use>
+                        </svg>
+                        <span class="proposal__markup-text">Не включен в программу</span>
                       </div>
                       <span class="proposal__project-votes proposal__project-votes--mobile">Всего проголосовало: 504</span>
                     </div>
