--- a/source/proposal-6-7_var2-new.html
+++ b/source/proposal-6-7_var2-new.html
@@ -12,6 +12,30 @@
           для демонстрации различных видов шрифта и
           в разработке макетов. Как правило их содержание бессмысленно.
         </h1>
+        <div class="proposal__status proposal__status--files">
+          <p>Статус проекта <span>Реализовано</span></p>
+          <div class="files">
+            <a class="file-item" href="#" download>
+              <svg width="24" height="24">
+                <use xlink:href="img/sprite.svg#icon-page"></use>
+              </svg>
+              <p class="file-item__info">
+                <span class="file-item__name">Рыбным текстом называется
+                  текст</span>
+              </p>
+            </a>
+            <a class="file-item" href="#" download>
+              <svg width="24" height="24">
+                <use xlink:href="img/sprite.svg#icon-page"></use>
+              </svg>
+              <p class="file-item__info">
+                <span class="file-item__name">Cлужащий для временного наполнения
+                  макета в
+                  публикациях</span>
+              </p>
+            </a>
+          </div>
+        </div>
         <div class="proposal__curator curator">
           <h3>Вы&nbsp;можете задать свои вопросы куратору территории:</h3>
           <div class="curator__container">
@@ -203,6 +227,12 @@
                         <label for="radio-1" class="proposal__project-title">Вариант №1</label>
                       </div>
                     </div>
+                    <div class="proposal__markup">
+                      <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+                        <use xlink:href="img/sprite.svg#icon-info"></use>
+                      </svg>
+                      <span class="proposal__markup-text">Не включен в программу</span>
+                    </div>
                     <span class="proposal__project-votes proposal__project-votes--mobile">Всего проголосовало: 504</span>
                   </div>
                   <p class="proposal__project-text">
@@ -356,6 +386,12 @@
                         <input type="radio" name="radio" id="radio-2" value="radio-2" checked>
                         <label class="proposal__project-title" for="radio-2">Вариант №2</label>
                       </div>
+                    </div>
+                    <div class="proposal__markup proposal__markup--blue">
+                      <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+                        <use xlink:href="img/sprite.svg#icon-info"></use>
+                      </svg>
+                      <span class="proposal__markup-text">Победитель</span>
                     </div>
                     <span class="proposal__project-votes proposal__project-votes--mobile">Всего проголосовало: 504</span>
                   </div>
