--- a/source/improvement-list_var2-new.html
+++ b/source/improvement-list_var2-new.html
@@ -118,6 +118,10 @@
           <li class="proposal-list__item">
             <div class="proposal-list__wrapper">
               <div class="proposal-list__project-mark">
+                <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="7" cy="7" r="7" fill="#DCDEE0" />
+                  <path d="M4.19922 7.00039L6.43922 9.10039L9.79922 4.90039" stroke="white" stroke-width="1.5" />
+                </svg>
                 <div class="proposal-list__tooltip proposal-list__tooltip--blue">
                   <div class="proposal-list__tooltip-icon" tabindex="0">
                     <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
@@ -166,6 +170,10 @@
           <li class="proposal-list__item">
             <div class="proposal-list__wrapper">
               <div class="proposal-list__project-mark">
+                <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="7" cy="7" r="7" fill="#DCDEE0" />
+                  <path d="M4.19922 7.00039L6.43922 9.10039L9.79922 4.90039" stroke="white" stroke-width="1.5" />
+                </svg>
                 <div class="proposal-list__tooltip">
                   <div class="proposal-list__tooltip-icon" tabindex="0">
                     <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
@@ -213,6 +221,10 @@
           <li class="proposal-list__item">
             <div class="proposal-list__wrapper">
               <div class="proposal-list__project-mark">
+                <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="7" cy="7" r="7" fill="#DCDEE0" />
+                  <path d="M4.19922 7.00039L6.43922 9.10039L9.79922 4.90039" stroke="white" stroke-width="1.5" />
+                </svg>
                 <div class="proposal-list__tooltip proposal-list__tooltip--blue no-pointer">
                   <div class="proposal-list__tooltip-icon">
                     <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
