добавляет оранжевый цвет статусу

--- a/source/proposal-6-7_var2-new.html
+++ b/source/proposal-6-7_var2-new.html
@@ -12,7 +12,7 @@
           для демонстрации различных видов шрифта и
           в разработке макетов. Как правило их содержание бессмысленно.
         </h1>
-        <div class="proposal__status proposal__status--files">
+        <div class="proposal__status proposal__status--files proposal__status--orange">
           <p>Статус проекта <span>Реализовано</span></p>
           <div class="files">
             <a class="file-item" href="#" download>
