фиксит по баглисту

--- a/source/public-hearing-reject.html
+++ b/source/public-hearing-reject.html
@@ -257,7 +257,7 @@
                 </div>
                 <div class="application-popup__input-wrapper">
                   <label for="user-date">Дата рождения</label>
-                  <input type="text" name="user-date" id="patronymic" class="application-popup__input text-input"
+                  <input type="text" name="user-date" id="user-date" class="application-popup__input text-input"
                     placeholder="23.03.1998" aria-label="Введите дату рождения" />
                   <span class="application-popup__error-text">Введите дату рождения</span>
                 </div>
