--- a/source/public-hearings.html
+++ b/source/public-hearings.html
@@ -56,6 +56,7 @@
             <p class="project-vote__expire project-vote__expire--address">
               г. Москва, 2-я Черногрязская улица, д.10
             </p>
+            <a class="project-vote__link link link--blue link--underline" href="#">Ссылка на трансляцию</a>
           </div>
           <div class="project-vote__container project-vote__container--meta">
             <h2 class="project-vote__title project-vote__title--result">128</h2>
@@ -254,7 +255,7 @@
                 </div>
                 <div class="application-popup__input-wrapper">
                   <label for="user-date">Дата рождения</label>
-                  <input type="text" name="user-date" id="patronymic" class="application-popup__input text-input"
+                  <input type="text" name="user-date" id="user-date" class="application-popup__input text-input"
                     placeholder="23.03.1998" aria-label="Введите дату рождения" />
                   <span class="application-popup__error-text">Введите дату рождения</span>
                 </div>
