добавляет верстку заявления

--- a/source/index.html
+++ b/source/index.html
@@ -246,6 +246,9 @@
         <li>
           <a href="public-hearings-consider.html" target="_blank">Публичные слушания - статус на рассмотрении</a>
         </li>
+        <li>
+          <a href="application-result.html" target="_blank">Заявление на предоставление предложений и замечаний</a>
+        </li>
         <br />
         <li>
           <a href="public-debates-list.html" target="_blank">Разводящая по
