правит настройки печати

--- a/source/application-result.html
+++ b/source/application-result.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-<include src="source/components/head.html"></include>
+<include src="source/components/head-print.html"></include>
 
 <body class="page-body">
   <main class="application-result">
