правит отображение ошибок в попапе публичные слушания

--- a/source/public-hearings-consider.html
+++ b/source/public-hearings-consider.html
@@ -352,11 +352,13 @@
                     accept=".doc,.docx,.xml,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,.pdf">
                   <label class="js-file-label" for="user-files"><span>Загрузить файл</span></label>
                   <span class="error-field error-field--size visually-hidden">Файл не должен превышать 10Мб</span>
+                  <span class="error-field">Пожалуйста, загрузите файл</span>
                 </div>
               </div>
               <div class="application-popup__checkbox form-checkbox">
                 <input type="checkbox" name="agreement" id="agreement" value="Служащий">
                 <label for="agreement">Даю согласие на обработку и использование персональных данных.</label>
+                <span class="error-field">Пожалуйста заполните поле</span>
               </div>
               <div class="application-popup__bottom">
                 <button class="application-popup__btn button button--blue" type="submit">Отправить</button>
