Обновление Реализованные объекты/благоустройство

--- a/source/index.html
+++ b/source/index.html
@@ -337,6 +337,17 @@
         <li>
           <a href="voting-page.html" target="_blank">Страница голосования - район не выбран</a>
         </li>
+
+        <br>
+        <li>
+          <a href="alternate-list.html" target="_blank">Новая разводящая, альтернативный список </a>
+        </li>
+        <li>
+          <a href="project-page-with-thumbs.html" target="_blank">Страница проекта с галереей с миниатюрами</a>
+        </li>
+        <li>
+          <a href="project-page-with-thumbs-double-galleries.html" target="_blank">Страница проекта с двумя галереями с миниатюрами</a>
+        </li>
       </ul>
     </div>
   </main>
