--- a/source/alternate-list.html
+++ b/source/alternate-list.html
@@ -29,14 +29,12 @@
       <form class="categories-filter js-form-select">
         <ul class="page-nav">
           <li class="page-nav__item">
-            <input class="page-nav__radio-input" type="radio" name="status" id="regional-status" checked>
-            <label class="page-nav__radio-label" for="regional-status" aria-label="Региональные"></label>
-            <a href="#" class="page-nav__link" data-radio="regional-status">Региональные</a>
+            <input class="page-nav__radio-input" type="radio" name="status" id="regional-status" checked="">
+            <label class="page-nav__radio-label" for="regional-status" aria-label="Региональные">Региональные</label>
           </li>
           <li class="page-nav__item">
             <input class="page-nav__radio-input" type="radio" name="status" id="local-status">
-            <label class="page-nav__radio-label" for="local-status" aria-label="Местные"></label>
-            <a href="#" class="page-nav__link" data-radio="local-status">Местные</a>
+            <label class="page-nav__radio-label" for="local-status" aria-label="Местные">Местные</label>
           </li>
         </ul>
         <select name="categories" id="categories" title="Открыть фильтр" data-deselect="true" class="multiple-select js-multiple-select" data-placeholder-text="Все категории" multiple>
