--- a/source/authorization.html
+++ b/source/authorization.html
@@ -39,10 +39,10 @@
               <span class="authorization__company">Разнообразный и богатый опыт постоянный количественный рост и сфера нашей активности и деятельности на территории России</span>
               <span class="authorization__position">Сотрудник</span>
               <svg class="authorization__icon" width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="16.0677" cy="16" r="16" fill="#EAF4FA"/>
+                <circle cx="16.0677" cy="16" r="16" fill="#EDF2FE"/>
                 <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M19.8465 15.4695L14.3465 10L13.2888 11.0636L18.2541 16.0013L13.2888 20.9389L14.3465 22.0025L19.8465 16.5331C19.9881 16.3923 20.0677 16.2009 20.0677 16.0013C20.0677 15.8016 19.9881 15.6102 19.8465 15.4695Z"
-                      fill="#2C8ECC"/>
+                      fill="#0E4CD3"/>
               </svg>
             </label>
           </li>
@@ -52,10 +52,10 @@
               <span class="authorization__company">ПАО «РОСТЕЛЕКОМ»</span>
               <span class="authorization__position">Сотрудник</span>
               <svg class="authorization__icon" width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="16.0677" cy="16" r="16" fill="#EAF4FA"/>
+                <circle cx="16.0677" cy="16" r="16" fill="#EDF2FE"/>
                 <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M19.8465 15.4695L14.3465 10L13.2888 11.0636L18.2541 16.0013L13.2888 20.9389L14.3465 22.0025L19.8465 16.5331C19.9881 16.3923 20.0677 16.2009 20.0677 16.0013C20.0677 15.8016 19.9881 15.6102 19.8465 15.4695Z"
-                      fill="#2C8ECC"/>
+                      fill="#0E4CD3"/>
               </svg>
             </label>
           </li>
@@ -65,10 +65,10 @@
               <span class="authorization__company">Иванов П.И.</span>
               <span class="authorization__position">Частное лицо</span>
               <svg class="authorization__icon" width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="16.0677" cy="16" r="16" fill="#EAF4FA"/>
+                <circle cx="16.0677" cy="16" r="16" fill="#EDF2FE"/>
                 <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M19.8465 15.4695L14.3465 10L13.2888 11.0636L18.2541 16.0013L13.2888 20.9389L14.3465 22.0025L19.8465 16.5331C19.9881 16.3923 20.0677 16.2009 20.0677 16.0013C20.0677 15.8016 19.9881 15.6102 19.8465 15.4695Z"
-                      fill="#2C8ECC"/>
+                      fill="#0E4CD3"/>
               </svg>
             </label>
           </li>
@@ -78,10 +78,10 @@
               <span class="authorization__company">ИП Петров И.Ю.</span>
               <span class="authorization__position">Сотрудник</span>
               <svg class="authorization__icon" width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="16.0677" cy="16" r="16" fill="#EAF4FA"/>
+                <circle cx="16.0677" cy="16" r="16" fill="#EDF2FE"/>
                 <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M19.8465 15.4695L14.3465 10L13.2888 11.0636L18.2541 16.0013L13.2888 20.9389L14.3465 22.0025L19.8465 16.5331C19.9881 16.3923 20.0677 16.2009 20.0677 16.0013C20.0677 15.8016 19.9881 15.6102 19.8465 15.4695Z"
-                      fill="#2C8ECC"/>
+                      fill="#0E4CD3"/>
               </svg>
             </label>
           </li>
@@ -90,10 +90,10 @@
             <label class="authorization__label" for="company-5">
               <span class="authorization__company">ИП Петров И.Ю.</span>
               <svg class="authorization__icon" width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="16.0677" cy="16" r="16" fill="#EAF4FA"/>
+                <circle cx="16.0677" cy="16" r="16" fill="#EDF2FE"/>
                 <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M19.8465 15.4695L14.3465 10L13.2888 11.0636L18.2541 16.0013L13.2888 20.9389L14.3465 22.0025L19.8465 16.5331C19.9881 16.3923 20.0677 16.2009 20.0677 16.0013C20.0677 15.8016 19.9881 15.6102 19.8465 15.4695Z"
-                      fill="#2C8ECC"/>
+                      fill="#0E4CD3"/>
               </svg>
             </label>
           </li>
