--- a/source/new-ui-kit.html
+++ b/source/new-ui-kit.html
@@ -607,7 +607,7 @@
                 <input id="location-residence1" type="radio" name="location1" value="residence" checked>
                 <label for="location-residence1">
                   Выбранный регион
-                  <span class="page-header__location-address location-switcher__address">Не указано</span>
+                  <span>Не указано</span>
                 </label>
               </div>
 
@@ -615,7 +615,7 @@
                 <input id="location-registration2" type="radio" name="location1" value="registration">
                 <label for="location-registration2">
                   Адрес проживания
-                  <span class="page-header__location-address location-switcher__address">Не указано</span>
+                  <span>Не указано</span>
                 </label>
               </div>
 
@@ -623,7 +623,7 @@
                 <input id="location-registration3" type="radio" name="location1" value="registration1">
                 <label for="location-registration3">
                   Адрес регистрации
-                  <span class="page-header__location-address location-switcher__address">Не указано</span>
+                  <span>Не указано</span>
                 </label>
               </div>
             </div>
