--- a/source/new-main-with-banner.html
+++ b/source/new-main-with-banner.html
@@ -95,14 +95,14 @@
 
       <hr>
 
-      <section class="section mt-5 mb-5">
+      <section class="section pt-5 pb-5">
         <div class="section__head px-md-2">
           <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
             <use xlink:href="img/sprite.svg#icon-section"></use>
           </svg>
           <h2 class="section__title">Разделы</h2>
         </div>
-        <ul class="project js_short_list row gx-0 gx-md-3 gy-3 gy-md-4 pb-3 pb-md-5 mt-3 mt-mb-0">
+        <ul class="project js_short_list row gx-0 gx-md-3 gy-3 gy-md-4 mt-3 mt-mb-0">
           <li class="col-md-6">
             <div class="project__item">
             <a href="#" class="project__link">
@@ -201,7 +201,7 @@
     <include src="source/components/new-design-banner-2.html"></include>
 
     <div class="container">
-      <section class="section news mt-3 mt-md-5 mb-5">
+      <section class="section news pb-5 mb-3 mb-md-0">
         <div class="section__head pt-5 px-md-2">
           <svg class="news__title-icon" width="32" height="32" viewBox="0 0 32 32" fill="none"
                xmlns="http://www.w3.org/2000/svg">
