Fixes for paginator and selects

--- a/source/direct-line.html
+++ b/source/direct-line.html
@@ -348,7 +348,7 @@
                                          в публикациях или производстве веб-сайтов, пока финальный текст еще не создан.
                                          Рыбным текстом называется текст, служащий для временного наполнения макета.</p>
 
-            <div class="form-select">
+            <div class="form-select-custom">
               <select id="widget-select-project-category" class="js-select-level">
                 <option data-placeholder="true" value="Тип виджета">Выберите категорию вопроса</option>
                 <option value="Обсуждения">Сбор бытовых отходов</option>
