--- a/source/improvement-list.html
+++ b/source/improvement-list.html
@@ -93,7 +93,7 @@
           </p>
         </div>
         <form
-          class="area-improvement__select form-select js-form-select-improvement">
+          class="area-improvement__select form-select-custom js-form-select-improvement">
           <select name="category-select" id="category-select"
             title="Открыть фильтр">
             <option value="Сначала популярные" title="Сначала популярные">
