--- a/source/improvement-list_var2-new.html
+++ b/source/improvement-list_var2-new.html
@@ -101,7 +101,7 @@
           </div>
         </div>
         <form
-          class="area-improvement__select form-select js-form-select-improvement">
+          class="area-improvement__select form-select-custom js-form-select-improvement">
           <select name="category-select" id="category-select"
             title="Открыть фильтр">
             <option value="Сначала популярные" title="Сначала популярные">
