--- a/source/projects-2-map.html
+++ b/source/projects-2-map.html
@@ -77,7 +77,7 @@
                         <h1 class="filter__header-item">Проекты на голосовании&nbsp;</h1>
                         <span class="filter__header-item filter__header-item--last">в категории</span>
 
-                        <div class="filter__category-select form-select js-form-select">
+                        <div class="filter__category-select form-select-custom js-form-select">
                             <select name="category-select" id="category-select" title="Открыть фильтр">
                                 <option value="ЖКХ" title="ЖКХ">ЖКХ</option>
                                 <option value="Благоустройство" title="Благоустройство">Благоустройство</option>
@@ -114,7 +114,7 @@
                         </div>
                     </div>
 
-                    <div class="filter__item filter-2__select filter__item--vote filter-vote form-select js-form-select">
+                    <div class="filter__item filter-2__select filter__item--vote filter-vote form-select-custom js-form-select">
                         <select name="vote-select" id="vote-select" data-placeholder-text="Поиск города"
                             data-deselect="true">
                             <option data-placeholder="true"></option>
@@ -138,7 +138,7 @@
                                 class="filter-2__counter-total">2</span>
                         </div>
                         <div
-                            class="filter__item filter-2__select filter__item--vote filter-vote form-select js-form-select">
+                            class="filter__item filter-2__select filter__item--vote filter-vote form-select-custom js-form-select">
                             <select name="vote-select" id="vote-select" data-placeholder-text="Фильтр"
                                 data-deselect="true">
                                 <option data-placeholder="true"></option>
