--- a/source/projects.html
+++ b/source/projects.html
@@ -17,7 +17,7 @@
               <h1 class="filter__header-item">Проекты на голосовании&nbsp;</h1>
               <span class="filter__header-item filter__header-item--last">в категории</span>
 
-              <div class="filter__category-select form-select js-form-select">
+              <div class="filter__category-select form-select-custom js-form-select">
                 <select name="category-select" id="category-select" title="Открыть фильтр">
                   <option value="Библиотеки" title="Библиотеки">Библиотеки</option>
                   <option value="Благоустройство" title="Благоустройство">Благоустройство</option>
@@ -75,7 +75,7 @@
                     <label for="filter-location-local">Местные</label>
                   </div>
 
-                  <div class="filter__item filter__item--vote filter-vote form-select js-form-select">
+                  <div class="filter__item filter__item--vote filter-vote form-select-custom js-form-select">
                     <select name="vote-select" id="vote-select" data-placeholder-text="Голосовал" data-deselect="true">
                       <option data-placeholder="true"></option>
                       <option value="За">За</option>
