--- a/source/improvement-list-var3.html
+++ b/source/improvement-list-var3.html
@@ -71,7 +71,7 @@
                       <p class="status-info__text">Выберите вариант дизайн-проекта для благоустройства победивших территорий</p>
                   </div>
                 </div>
-                <form class="area-improvement__select form-select js-form-select-improvement">
+                <form class="area-improvement__select form-select-custom js-form-select-improvement">
                   <select name="category-select" id="category-select" title="Открыть фильтр">
                     <option value="Сначала популярные" title="Сначала популярные">Сначала популярные</option>
                     <option value="Сначала непопулярные" title="Сначала непопулярные">Сначала непопулярные</option>
