--- a/source/composite-poll-3.html
+++ b/source/composite-poll-3.html
@@ -150,7 +150,8 @@
                 <!-- <span>5</span> -->
                 <span>10</span>
               </div>
-              <div class="js-poll-range" id="poll-range"></div>
+              <div class="js-poll-range" id="poll-range" data-input="poll-range"
+                   data-min="1" data-max="10" data-step="1"></div>
               <div class="form-range__description">
                 <span>очень плохо</span>
                 <span>очень хорошо</span>
