--- a/source/_v2-main-with-banner.html
+++ b/source/_v2-main-with-banner.html
@@ -103,7 +103,7 @@
           <h2 class="section__title">Разделы</h2>
         </div>
         <ul class="project js_short_list row gx-3 gy-3 gy-md-4 mt-3 mt-mb-0">
-          <li class="col-md-6">
+          <li class="col-md-6 js-same-height">
             <div class="project__item">
             <a href="#" class="project__link">
             <span class="project__icon">
@@ -116,7 +116,7 @@
             </a>
           </div>
           </li>
-          <li class="col-md-6">
+          <li class="col-md-6 js-same-height">
             <div class="project__item">
             <a href="#" class="project__link">
             <span class="project__icon">
@@ -129,7 +129,7 @@
             </a>
           </div>
           </li>
-          <li class="col-md-6">
+          <li class="col-md-6 js-same-height">
             <div class="project__item">
               <a href="#" class="project__link">
             <span class="project__icon">
@@ -142,7 +142,7 @@
               </a>
             </div>
           </li>
-          <li class="col-md-6">
+          <li class="col-md-6 js-same-height">
             <div class="project__item">
               <a href="#" class="project__link">
             <span class="project__icon">
@@ -155,7 +155,7 @@
               </a>
             </div>
           </li>
-          <li class="col-md-6">
+          <li class="col-md-6 js-same-height">
             <div class="project__item">
               <a href="#" class="project__link">
             <span class="project__icon">
@@ -168,7 +168,7 @@
               </a>
             </div>
           </li>
-          <li class="col-md-6">
+          <li class="col-md-6 js-same-height">
             <div class="project__item">
               <a href="#" class="project__link">
             <span class="project__icon">
@@ -181,7 +181,7 @@
               </a>
             </div>
           </li>
-          <li class="col-md-6">
+          <li class="col-md-6 js-same-height">
             <div class="project__item">
               <a href="#" class="project__link">
             <span class="project__icon">
